# fp-course-hw

./: README.md
cw2/: cw2.cabal
cw2/app/: Main.hs
cw2/src/: Lib.hs
cw2/test/: Spec.hs
hw10/: hw10.cabal  stack.yaml
hw10/src/: Lens.hs  Main.hs  Template.hs
hw11/: hw11.cabal  logger-config.yaml  stack.yaml
hw11/src/: Main.hs
hw3/: hw3.cabal
hw3/src/: Coins.hs  Map.hs  Set.hs  SetFromMap.hs  Tree.hs
hw4/: hw4.cabal
hw4/src/: LeastCommonAncestor.hs  MMonadFish.hs  MMonadJoin.hs  MonadFishJoin.hs  MonadFishM.hs  Monads.hs  StateMonad.hs  Tmp.hs  ZeroInMin.hs
hw5/: hw5.cabal  tmp
hw5/src/: AParser.hs  Instances.hs  SExpr.hs  Tuple.hs
hw6/: hw6.cabal
hw6/src/: Arithmetic.hs  OS.hs  SMA.hs  Tree.hs
hw7/: hw7.cabal
hw7/src/: MainCfg.hs  MainParse.hs  Parser.hs
hw8/: hw8.cabal
hw8/src/: MainCfg.hs  Transformers.hs
hw9/: hw9.cabal  lists.html
hw9/src/: ArrayList.hs  Main.hs
start/: BinomialHeap.hs  CW.hs  HW1.hs  HW2.hs
