name:                hw10
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hw10#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hw10
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Lens, Template
  build-depends:       base >= 4.7 && < 5,
                       template-haskell >= 2.11,
                       mtl >= 2.2, 
                       filesystem-trees,
                       lens,
                       directory >= 1.2,
                       filepath >= 1.4
