name:                hw3
version:             0.1.0.0
synopsis:            Homework #3
license:             BSD3
license-file:        LICENSE
author:              Marianna Bisyarina
maintainer:          bisyarinamariashka@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  other-modules:       Coins, Map, Set, Tree, SetFromMap
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
