name:                hw7
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hw7#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hw7-cfg-creator
  hs-source-dirs:      src
  main-is:             MainCfg.hs 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text >= 1.2
                       , containers >= 0.5

executable hw7-expr-parse
  hs-source-dirs:      src
  main-is:             MainParse.hs 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text >= 1.2
                       , containers >= 0.5
                       , optparse-applicative >= 0.12
                       , mtl
                       , megaparsec >= 4.3.0
