name:                hw8
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hw8#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hw8
  hs-source-dirs:      src
  main-is:             MainCfg.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , mtl >= 2.2
                       , transformers >= 0.5
                       , either >= 4.4
                       , text >= 1.2
                       , containers >= 0.5
                       , exceptions >= 0.8
